// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: true, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: true, counter: false and resize: vertical 2`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: error, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-error);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: error, compact: true, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-error);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: none, compact: false, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px) calc(var(--p-leading-normal) + calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--_p-textarea-a) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: none, compact: true, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px) calc(var(--p-leading-normal) + calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--_p-textarea-a) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: success, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-success);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-success);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: success, compact: true, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-success);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px) calc(var(--p-leading-normal) + calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-success);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--_p-textarea-a) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: error, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-error);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: error, compact: true, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-error);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: none, compact: false, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px) calc(var(--p-leading-normal) + calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--_p-textarea-a) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: none, compact: true, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px) calc(var(--p-leading-normal) + calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--_p-textarea-a) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: success, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-success);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-success);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: success, compact: true, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-success);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  textarea:hover, .label-wrapper:hover~textarea {
    border-color: var(--p-color-success);
  }
}

.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: true, hideLabel: false, state: none, compact: true, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--p-radius-lg);
  background: var(--p-color-frosted);
  color: var(--p-color-contrast-medium);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px) calc(var(--p-leading-normal) + calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 4px));
  cursor: text;
  border-color: transparent;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--_p-textarea-a) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true, isReadonly: false, hideLabel: true, state: error, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --_p-textarea-a: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--_p-textarea-a) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error);
  border-radius: var(--p-radius-xl);
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), border-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  padding: calc(28px * (var(--_p-textarea-a) - 0.64285714) + 5px) calc(22.4px * (var(--_p-textarea-a) - 0.64285714) + 8px);
  cursor: not-allowed;
}
textarea:focus {
  border-color: var(--p-color-error);
}
.root {
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.wrapper {
  display: grid;
  opacity: 0.4;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(forced-colors:active) {
  .wrapper {
    opacity: 1;
    color: GrayText;
  }
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;
